--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ python = "^3.11"
 numpy = "^1.26.4"
 matplotlib = "^3.8.3"
 tqdm = "^4.66.2"
-torch = "^2.2.0"
+torch = "2.3.0"
 transformers = "^4.40.1"
 neptune = "^1.10.2"
 einops = "^0.8.0"
@@ -25,7 +25,11 @@ datasets = "^2.20.0"
 rotary-embedding-torch = "^0.6.4"
 tokenizers = "^0.19.1"
 # pytorch-fast-transformers = "0.4.0" # not working with pep 517, installing independently from source using setup_env.sh
-torchvision = "^0.19.0"
+torchvision = "0.18.0"
+torchtext = "0.18.0"
+torchdata = "^0.10.1"
+pytorch-fast-transformers = "^0.4.0"
+hydra-core = "^1.3.2"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.2"
