--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,10 +1,10 @@
 defaults:
-  - model: classification_cosformer_8x4096
+  - model: sequence_modelling_cosformer_8x4096
   - training: default
   - tokenizer: google-byt5-small
   - neptune: default
   - dataset: enwik9/enwik9_512
   - _self_
 
-task: classification
-device: cuda
+task: sequence_modelling
+device: cpu
