--- a/conf/experiments/config.yaml
+++ b/conf/experiments/config.yaml
@@ -1,3 +1,8 @@
+hydra:
+  searchpath:
+    - file://conf
+    - file://conf/experiments
+
 defaults:
   - model: sequence_modelling_cosformer_8x4096
   - training: default
