--- a/conf/training/scheduler/default.yaml
+++ b/conf/training/scheduler/default.yaml
@@ -1,4 +1,4 @@
 scheduler: true
-lr_warmup_steps: 1000
-num_all_steps: 10000
+lr_warmup_fraction: 0.1
+scheduler_steps_fraction: 1.0
 final_lr_fraction: 0.001
