--- a/conf/dataset/listops/listops_4096.yaml
+++ b/conf/dataset/listops/listops_4096.yaml
@@ -1,5 +1,5 @@
 _target_: data.listops.ListOps.create_split_datasets
 split: all
-path: ./datastorage/
+path: datastorage/lra_release 3/listops-1000
 max_length: 4096
 shuffle: true
