--- a/conf/experiments/imdb.yaml
+++ b/conf/experiments/imdb.yaml
@@ -3,12 +3,12 @@ hydra:
     - file://conf
 
 defaults:
-  - model: sequence_modelling_cosformer_8x4096
+  - model: classification_cosformer_8x4096
   - training: default
   - neptune: default
   - dataset: imdb/imdb_4096
   - _self_
 
 tokenizer: custom_char_level
-task: sequence_modelling
+task: classification
 device: cuda
