--- a/conf/experiments/enwik9_vanilla.yaml
+++ b/conf/experiments/enwik9_vanilla.yaml
@@ -3,12 +3,12 @@ hydra:
     - file://conf
 
 defaults:
-  - model: sequence_modelling_cosformer_8x4096
+  - model: sequence_modelling_vanilla_8x4096
   - training: default
   - neptune: default
-  - dataset: enwik9/enwik9_512
+  - dataset: enwik9/enwik9_4096
   - _self_
 
 tokenizer: custom_char_level
 task: sequence_modelling
-device: cpu
+device: cuda
