--- a/conf/dataset/enwik9/enwik9_4096.yaml
+++ b/conf/dataset/enwik9/enwik9_4096.yaml
@@ -1,5 +1,5 @@
 _target_: data.enwik9.Enwik9.create_split_datasets
-split: all
+use_validation: false
 path: ./datastorage/enwik9
 max_length: 4096
 shuffle: true
