--- a/conf/experiments/imdb_vanilla_1x4096,2x2048,1x4096.yaml
+++ b/conf/experiments/imdb_vanilla_1x4096,2x2048,1x4096.yaml
@@ -4,7 +4,7 @@ hydra:
 
 defaults:
   - model: classification_vanilla_1x4096,2x2048,1x4096
-  - training: default
+  - training: default_5_epochs
   - neptune: default
   - dataset: imdb/imdb_4096
   - _self_
