--- a/conf/experiments/imdb_cosformer_1x4096,2x2048,1x4096.yaml
+++ b/conf/experiments/imdb_cosformer_1x4096,2x2048,1x4096.yaml
@@ -4,7 +4,7 @@ hydra:
 
 defaults:
   - model: classification_cosformer_1x4096,2x2048,1x4096
-  - training: default_5_epochs
+  - training: default_3_epochs
   - neptune: default
   - dataset: imdb/imdb_4096
   - _self_
@@ -13,3 +13,5 @@ tokenizer: custom_char_level
 task: classification
 device: cuda
 seed: 47
+
+training:
