--- a/conf/experiments/listops/vanilla_1x4096,4x2048,1x4096.yaml
+++ b/conf/experiments/listops/vanilla_1x4096,4x2048,1x4096.yaml
@@ -3,10 +3,10 @@ hydra:
     - file://conf
 
 defaults:
-  - model: classification_cosformer_1x4096,2x2048,1x4096
+  - model: classification_cosformer_1x4096,4x2048,1x4096
   - training: default_5_epochs
   - neptune: default
-  - dataset: imdb/imdb_4096
+  - dataset: listops/listops_4096
   - _self_
 
 tokenizer: custom_char_level
@@ -14,4 +14,5 @@ task: classification
 device: cuda
 seed: 47
 
-training:
+model:
+  num_classes: 10
