--- a/conf/experiments/ann_cosformer_6x4096.yaml
+++ b/conf/experiments/ann_cosformer_6x4096.yaml
@@ -3,10 +3,10 @@ hydra:
     - file://conf
 
 defaults:
-  - model: classification_cosformer_1x4096,2x2048,1x4096
+  - model: classification_cosformer_6x4096
   - training: default_5_epochs
   - neptune: default
-  - dataset: imdb/imdb_4096
+  - dataset: ann/ann_4096
   - _self_
 
 tokenizer: custom_char_level
