--- a/conf/experiments/listops_vanilla_2x4096,4x2048,2x4096.yaml
+++ b/conf/experiments/listops_vanilla_2x4096,4x2048,2x4096.yaml
@@ -9,7 +9,7 @@ defaults:
   - dataset: listops/listops_4096
   - _self_
 
-tokenizer: custom_char_level
+tokenizer: listops
 task: classification
 device: cuda
 seed: 47
