--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,8 @@ tokenizers = "^0.19.1"
 torchvision = "0.18.0"
 torchtext = "0.18.0"
 torchdata = "^0.10.1"
-pytorch-fast-transformers = "^0.4.0"
 hydra-core = "^1.3.2"
+hydra = "2.5"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.2"
