--- a/conf/model/hourglass/default.yaml
+++ b/conf/model/hourglass/default.yaml
@@ -1,8 +1,7 @@
 downsampling_type: linear
 upsampling_type: linear
-attention_downsampling: false
-attention_upsampling: false
+attention_downsampling: true
+attention_upsampling: true
+attention_sampling_full_attention: true
 upsampling_residual: true
 sampling_post_norm: true
-sampling_use_linear: true
-sampling_use_feedforward: false
