--- a/conf/experiments/copying_cosformer_2x512,4x256,2x512.yaml
+++ b/conf/experiments/copying_cosformer_2x512,4x256,2x512.yaml
@@ -6,7 +6,7 @@ defaults:
   - model: sequence_modelling_cosformer_2x512,4x256,2x512
   - training: default
   - neptune: default
-  - dataset: enwik9/enwik9_4096
+  - dataset: copying/copying_512
   - _self_
 
 tokenizer: custom_char_level
