--- a/conf/dataset/copying/copying_512.yaml
+++ b/conf/dataset/copying/copying_512.yaml
@@ -6,5 +6,4 @@ shuffle: true
 vocab_size: 40
 sequence_length: 512,20,10000 # train, test_start, test_stop
 num_samples: 300000,1 # train samples, test samples
-create_artificial_datasets: true
-
+create_artificial_datasets: false
