--- a/conf/dataset/copying/copying_128.yaml
+++ b/conf/dataset/copying/copying_128.yaml
@@ -2,8 +2,8 @@ _target_: data.copying.Copying.create_split_datasets
 use_validation: false
 path: ./datastorage/copying
 max_length: 50
-shuffle: true
+shuffle: false
 vocab_size: 40
 sequence_length: 128,20,8192 # train, test_start, test_stop
-num_samples: 300000,1 # train samples, test samples
+num_samples: 240000,1 # train samples, test samples
 create_artificial_datasets: true
