--- a/conf/experiments/enwik9_mamba_1x4x1.yaml
+++ b/conf/experiments/enwik9_mamba_1x4x1.yaml
@@ -3,10 +3,10 @@ hydra:
     - file://conf
 
 defaults:
-  - model: sequence_modelling_vanilla_2x512,4x256,2x512
+  - model: sequence_modelling_mamba_1x4x1
   - training: default
   - neptune: default
-  - dataset: copying/copying_512
+  - dataset: enwik9/enwik9_4096
   - _self_
 
 tokenizer: custom_char_level
