--- a/conf/dataset/copying/copying_128.yaml
+++ b/conf/dataset/copying/copying_128.yaml
@@ -6,4 +6,4 @@ shuffle: false
 vocab_size: 40
 sequence_length: 128,20,512 # train, test_start, test_stop
 num_samples: 240000,1 # train samples, test samples
-create_artificial_datasets: true
+create_artificial_datasets: false
